Fix card structure and add responsive text sizing

--- a/index.html
+++ b/index.html
@@ -6,8 +6,25 @@
     <title>Valentine's Surprise 💌</title>
     <link rel="stylesheet" href="main.css">
 </head>
-
 <body>
+    <div class="container">
+        <div class="envelope">
+            <div class="card">
+                <div class="message">Will you be my Valentine?</div>
+                <div class="buttons">
+                    <button id="yesBtn">Yes 💖</button>
+                    <button id="noBtn">No 💔</button>
+                </div>
+            </div>
+            <div class="lid"></div>
+            <div class="cover"></div>
+        </div>
+        <div class="shadow"></div>
+    </div>
+
+    <!-- Images for reactions -->
+    <img id="happyEmojiImage" src="happy_emoji.jpg" alt="Happy Emoji">
+    <img id="angyImage" src="angy.jpg" alt="Angry Image">
     
     <!-- Heart Rain Background -->
     <div id="chocolate_rains">
@@ -7345,3 +7362,389 @@
                     <div class="movable">
                         <div class="left"></div>
                         <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
+            <div class="inner">
+                <div class="regular">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+                <div class="reverse">
+                    <div class="movable">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="heart">
+            <div class="ring"></div>
